--- a/build.gradle
+++ b/build.gradle
@@ -29,3 +29,9 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+test {
+	jvmArgs += "-Xshare:off"
+	jvmArgs += "-javaagent:${configurations.testRuntimeClasspath.find { it.name.contains('mockito-core') }}"
+}
+
